--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,16 @@ services:
       - TZ=UTC
     volumes:
       - ./logs:/app/logs
+    ulimits:
+      nofile:
+        soft: 65535
+        hard: 65535
+    sysctls:
+      net.core.somaxconn: 65535
+      net.ipv4.ip_local_port_range: "1024 65535"
+      net.ipv4.tcp_fin_timeout: 30
+      net.ipv4.tcp_keepalive_time: 300
+      net.ipv4.tcp_tw_reuse: 1
     # Если нужно GPU
     # runtime: nvidia
     # deploy:
